require js demos

--- a/requirejs/index.html
+++ b/requirejs/index.html
@@ -1,1 +1,5 @@
-requirejs
+<a href="basic.html">Basic Example</a><br/>
+<a href="library.html">Using a library</a><br/>
+<a href="libraries.html">Using multiple libraries</a><br/>
+<a href="evolution.html">Evolutionary Mechanisms</a><br/>
+<a href="mvc.html">MVC Example</a><br/>
