--- a/requirejs/mvc.html
+++ b/requirejs/mvc.html
@@ -1,7 +1,10 @@
 <html>
     <head></head>
     <body>
-    	<a href="index.html">index</a>
+    	<a href="index.html">index</a><br/>
+    	<h1>Nav</h1>
+    	<a href="">Home</a><br/>
+    	<a href="#/page">subpage</a>
         <!-- js -->
         <script data-main="mvc" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
     </body>
