performance, optimization, testing, debuggin

--- a/requirejs/index.html
+++ b/requirejs/index.html
@@ -8,7 +8,7 @@
 <a href="polymorphism.html">Psuedo-Polymorphism</a><br/>
 <a href="patterns.html">Patterns</a><br/>
 <a href="templating.html">Templating Example</a><br/>
-<a href="performance.html">Performance</a><br/>
-<a href="optimization.html">Optimization</a><br/>
+<a href="http://requirejs.org/docs/why.html" target="_blank">Performance</a><br/>
+<a href="http://requirejs.org/docs/optimization.html" target="_blank">Optimization</a><br/>
 <a href="testing.html">Unit Testing</a><br/>
 <a href="debug.html">Debugging</a><br/>
