--- a/requirejs/library.html
+++ b/requirejs/library.html
@@ -2,6 +2,7 @@
     <head></head>
     <body>
     	<a href="index.html">index</a>
+    	<h1>Library</h1>
         <!-- js -->
         <script data-main="library" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
     </body>
