--- a/requirejs/mvc.html
+++ b/requirejs/mvc.html
@@ -2,7 +2,7 @@
     <head></head>
     <body>
     	<a href="index.html">index</a><br/>
-    	<h1>Nav</h1>
+    	<h1>Model/View/*</h1>
     	<a href="">Home</a><br/>
     	<a href="#/page">subpage</a>
         <!-- js -->
