--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<a href="basic.html">Basic Example</a><br/>
-<a href="library.html">Using a library</a><br/>
-<a href="libraries.html">Using multiple libraries</a><br/>
-<a href="plugins.html">Using plugins</a><br/>
-<a href="evolution.html">Evolutionary Mechanisms</a><br/>
-<a href="mv.html">Model/View Example</a><br/>
-<a href="mvc.html">Model/View/* Example</a><br/>
-<a href="polymorphism.html">Psuedo-Polymorphism</a><br/>
-<a href="patterns.html">Patterns</a><br/>
-<a href="templating.html">Templating Example</a><br/>
-<a href="http://requirejs.org/docs/why.html" target="_blank">Performance</a><br/>
-<a href="http://requirejs.org/docs/optimization.html" target="_blank">Optimization</a><br/>
-<a href="testing.html">Unit Testing</a><br/>
-<a href="debug.html">Debugging</a><br/>
+<h1>Frontend Velocity Demos</h1>
+<ol>
+	<li><a href="basic.html">Basic Example</a></li>
+	<li><a href="library.html">Using a library</a></li>
+	<li><a href="libraries.html">Using multiple libraries</a></li>
+	<li><a href="plugins.html">Using plugins</a></li>
+	<li><a href="evolution.html">Evolutionary Mechanisms</a></li>
+	<li><a href="mv.html">Model/View Example</a></li>
+	<li><a href="mvc.html">Model/View/* Example</a></li>
+	<li><a href="polymorphism.html">Psuedo-Polymorphism</a></li>
+	<li><a href="patterns.html">Patterns</a></li>
+	<li><a href="templating.html">Templating Example</a></li>
+	<li><a href="http://requirejs.org/docs/why.html" target="_blank">Performance</a></li>
+	<li><a href="http://requirejs.org/docs/optimization.html" target="_blank">Optimization</a></li>
+	<li><a href="testing.html">Unit Testing</a></li>
+	<li><a href="debug.html">Debugging</a></li>
+</ol>
